Added design patterns andensured test cases work

--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,17 @@
           </compilerArgs>
         </configuration>
       </plugin>
+      
+      <!-- Add maven-surefire-plugin for test execution -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.0.0-M9</version>
+        <configuration>
+          <useModulePath>false</useModulePath> <!-- Ensures compatibility with JUnit 5 -->
+        </configuration>
+      </plugin>
+
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>exec-maven-plugin</artifactId>
